Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/modules/T8159439/NPEForModuleInfoWithNonZeroSuperClassTest.java
/*
 * @test /nodynamiccopyright/
 * @bug 8159439
 * @summary javac throws NPE with Module attribute and super_class != 0
 * @build module-info
 * @compile/fail/ref=NPEForModuleInfoWithNonZeroSuperClassTest.out -XDrawDiagnostics NPEForModuleInfoWithNonZeroSuperClassTest.java
 */

class NPEForModuleInfoWithNonZeroSuperClassTest {}
